--- a/orders/templates/vacation_list.html
+++ b/orders/templates/vacation_list.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <h2>Список отпусков</h2>
+<div style="margin-top: 20px;">
+    <a href="{% url 'dashboard' %}" class="btn">← Назад в личный кабинет</a>
+</div>
+<br>
 <table>
     <thead>
         <tr>
