--- a/employees/templates/dashboard.html
+++ b/employees/templates/dashboard.html
@@ -9,6 +9,7 @@
             <li><a href="{% url 'employee_list' %}">Список сотрудников</a></li>
             <li><a href="{% url 'vacations' %}">Список отпусков</a></li>
             <li><a href="{% url 'sickleaves' %}">Список больничных</a></li>
+            <li><a href="{% url 'orders_list' %}">Список приказов</a></li>
         </ul>
     </div>
     
@@ -16,9 +17,10 @@
     <div class="main-content">
         
         <div class="actions">
-            <a href="" class="btn">Новый приказ об увольнении</a>
-            <a href="" class="btn">Новый приказ об отпуске</a>
-            <a href="" class="btn">Новый приказ о найме</a>
+            <a href="{% url 'create_dismiss' %}" class="btn">Новый приказ об увольнении</a>
+            <a href="{% url 'create_vacation' %}" class="btn">Новый приказ об отпуске</a>
+            <a href="{% url 'create_employee' %}" class="btn">Новый приказ о найме</a>
+            <a href="{% url 'create_sickleave' %}" class="btn">Новый приказ о больничном</a>
         </div>
     </div>
     {% endif %}
