--- a/orders/templates/sickleave_list.html
+++ b/orders/templates/sickleave_list.html
@@ -13,6 +13,7 @@
             <th>Дата начала</th>
             <th>Дата окончания</th>
             <th>Номер больничного листа</th>
+            <th>Номер приказа</th>
         </tr>
     </thead>
     <tbody>
@@ -22,6 +23,7 @@
             <td>{{ sick_leave.start_date }}</td>
             <td>{{ sick_leave.end_date }}</td>
             <td>{{ sick_leave.sick_number }}</td>
+            <td>{{ sick_leave.order.number }}</td>
         </tr>
         {% endfor %}
     </tbody>
