--- a/orders/templates/orders_list.html
+++ b/orders/templates/orders_list.html
@@ -48,7 +48,7 @@
                 <th>Номер</th>
                 <th>Дата</th>
                 <th>Тип</th>
-                <th>Сотрудник</th>
+                <th>Подписан</th>
                 <th>Детали</th>
             </tr>
         </thead>
