--- a/employees/templates/base.html
+++ b/employees/templates/base.html
@@ -82,6 +82,10 @@
     tbody tr:nth-child(even):hover {
         background-color: #ebeff5;
     }
+    .tablelink {
+  text-decoration: none;
+  color: #333;
+}
 </style>
 </head>
 <body>
