--- a/orders/templates/sickleave_list.html
+++ b/orders/templates/sickleave_list.html
@@ -19,11 +19,11 @@
     <tbody>
         {% for sick_leave in sick_leaves %}
         <tr>
-            <td>{{ sick_leave.employee.fullname }}</td>
-            <td>{{ sick_leave.start_date }}</td>
-            <td>{{ sick_leave.end_date }}</td>
-            <td>{{ sick_leave.sick_number }}</td>
-            <td>{{ sick_leave.order.number }}</td>
+            <td><a class="tablelink" style="display: block; text-decoration: none"  href="{% url 'update_sickleave' pk=sick_leave.id %}">{{ sick_leave.employee.fullname }}</a></td>
+            <td><a class="tablelink" style="display: block; text-decoration: none"  href="{% url 'update_sickleave' pk=sick_leave.id %}">{{ sick_leave.start_date }}</a></td>
+            <td><a class="tablelink" style="display: block; text-decoration: none"  href="{% url 'update_sickleave' pk=sick_leave.id %}">{{ sick_leave.end_date }}</a></td>
+            <td><a class="tablelink" style="display: block; text-decoration: none"  href="{% url 'update_sickleave' pk=sick_leave.id %}">{{ sick_leave.sick_number }}</a></td>
+            <td><a class="tablelink" style="display: block; text-decoration: none"  href="{% url 'update_sickleave' pk=sick_leave.id %}">{{ sick_leave.order.number }}</a></td>
         </tr>
         {% endfor %}
     </tbody>
